metadata/force-app/main/default/objects/CustomName_Ihfbo__c/CustomName_Ihfbo__c.object-meta.xml
<CustomObject>
    <description>Description_nimvH</description>
    <label>CustomLabel_MqwMx</label>
    <nameField>
        <label>CustomLabel_MqwMx</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_MqwMxs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>