metadata/force-app/main/default/objects/CustomName_Ihfbo__c/fields/CustomField_KakBl__c.field-meta.xml
<CustomField>
    <fullName>CustomField_KakBl__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldJBpha</label>
    <length>255</length>
    <type>Text</type>
</CustomField>