metadata/force-app/main/default/objects/CustomName_Ihfbo__c/fields/CustomField_SKiMg__c.field-meta.xml
<CustomField>
    <fullName>CustomField_SKiMg__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldnXiUk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>